--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -8,6 +8,12 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v4
+      - name: Build CSS
+        run: |
+          curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64
+          chmod +x tailwindcss-linux-x64
+          mv tailwindcss-linux-x64 tailwindcss
+          ./tailwindcss -i static/css/input.css -o static/css/style.css --minify
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@master
         env:
